Exceedance summary graph Hide some exceptions Remove videos from lightwindow gallery (enables controls, but can no longer navigate between them inside the lightwindow) Make menu subitems' width aligned Add some breadcrumbs

--- a/tigers/src/main/webapp/styles/simplicity/nav-horizontal.css
+++ b/tigers/src/main/webapp/styles/simplicity/nav-horizontal.css
@@ -111,6 +111,7 @@
                     border: 1px solid silver;
                     border-bottom: 0;
                     font-size: 1em;
+                    width: 100%;
                 }
                     ul#primary-nav ul li ul {
                         margin-left: 149px;
